<resources>
    <string name="app_name">YTMusic Pro</string>
    <string name="spotify_import_button">Spotify</string>
    <string name="spotify_import_button_file">Spotify file</string>
    <string name="spotify_import_dialog_title">Import Spotify</string>
    <string name="spotify_import_dialog_action">Importa da Spotify</string>
    <string name="spotify_import_dialog_file_action">Importa da file o ZIP</string>
    <string name="spotify_import_dialog_open_library">Apri libreria</string>
    <string name="spotify_import_direct_unavailable">Questa build non include accesso diretto a Spotify. Puoi comunque importare da file JSON, CSV o ZIP esportati da Spotify o da export compatibili.</string>
    <string name="spotify_import_idle">Importa playlist e brani salvati da Spotify. I setting Spotify non sono disponibili tramite API ufficiale.</string>
    <string name="spotify_import_progress">Import Spotify in corso…</string>
    <string name="spotify_import_success">Import Spotify completato.</string>
    <string name="spotify_import_failure">Import Spotify fallito: %1$s</string>
    <string name="spotify_file_import_progress">Import file o ZIP Spotify in corso…</string>
    <string name="spotify_file_import_success">Import da file completato.</string>
    <string name="spotify_file_import_failure">Import da file fallito: %1$s</string>
    <string name="spotify_library_title">Libreria Spotify</string>
    <string name="spotify_library_empty">Nessuna libreria Spotify importata ancora.</string>
    <string name="spotify_library_source">Fonte: %1$s</string>
    <string name="spotify_library_source_unknown">Fonte: sconosciuta</string>
    <string name="spotify_library_imported_at">Ultimo import: %1$s</string>
    <string name="spotify_library_imported_unknown">Ultimo import: non disponibile</string>
    <string name="spotify_library_playlists">Playlist</string>
    <string name="spotify_library_saved_tracks">Brani salvati</string>
    <string name="spotify_library_followed_artists">Artisti seguiti</string>
    <string name="spotify_library_search_hint">Cerca in playlist, brani e artisti</string>
    <string name="spotify_library_filter_results">Risultati per "%1$s": %2$d</string>
    <string name="spotify_library_filter_empty_results">Nessun risultato per "%1$s".</string>
    <string name="spotify_library_open_link">Apri su Spotify</string>
    <string name="spotify_library_export_action">Esporta backup</string>
    <string name="spotify_library_clear_action">Cancella libreria</string>
    <string name="spotify_library_export_success">Backup esportato: %1$s</string>
    <string name="spotify_library_export_failure">Esportazione fallita: %1$s</string>
    <string name="spotify_library_clear_title">Cancella libreria importata</string>
    <string name="spotify_library_clear_message">Vuoi davvero rimuovere la libreria Spotify importata da questa app?</string>
    <string name="spotify_library_clear_success">Libreria importata rimossa.</string>
    <string name="spotify_library_section_empty">Nessun dato per %1$s.</string>
    <string name="spotify_library_notes_header">Note import</string>

    <plurals name="spotify_library_section_count">
        <item quantity="one">%1$d elemento</item>
        <item quantity="other">%1$d elementi</item>
    </plurals>

    <plurals name="spotify_library_section_showing_limit">
        <item quantity="one">Mostro %1$d di %2$d elemento</item>
        <item quantity="other">Mostro %1$d di %2$d elementi</item>
    </plurals>
</resources>
